--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^2.18.4",
     "gatsby-cli": "^2.8.14",
     "gatsby-image": "^2.2.34",
+    "gatsby-plugin-google-gtag": "^2.8.0",
     "gatsby-plugin-manifest": "^2.2.30",
     "gatsby-plugin-offline": "^3.0.24",
     "gatsby-plugin-react-helmet": "^3.1.16",
